Store commonly used relations with-in json